
(executable
 (name hello)
 (public_name ocaml-canvas-hello)
 (modes byte_complete native js)
 (modules hello)
 (libraries ocaml-canvas)
)

(executable
 (name ppm_dump)
 (public_name ocaml-canvas-ppm-dump)
 (modes byte_complete native js)
 (modules ppm_dump)
 (libraries ocaml-canvas)
)

(executable
 (name test_canvas)
 (public_name ocaml-canvas-test)
 (modes byte_complete native js)
 (modules test_canvas)
 (libraries ocaml-canvas)
)

(executable
 (name gradients)
 (public_name ocaml-canvas-gradients)
 (modes byte_complete native js)
 (modules gradients)
 (libraries ocaml-canvas)
)

(executable
 (name snake)
 (public_name ocaml-canvas-snake)
 (modes byte_complete native js)
 (modules snake)
 (libraries ocaml-canvas)
)
