
(include_subdirs unqualified)

(env
 (dev (c_flags -O0 -g -ggdb -Wall -Werror -fstrict-aliasing
       -Wstrict-aliasing -Wno-missing-braces))
 (release (c_flags -O2 -DNDEBUG -Wall -Werror -fstrict-aliasing
           -Wstrict-aliasing -Wno-missing-braces)))

(rule
 (targets ccopt.sexp cclib.sexp)
 (action (run ./discover/discover.exe)))

(rule
 (alias configure)
 (deps configure.ml)
 (action (progn
  (with-stdout-to dune.inc.gen (run %{ocaml} unix.cma %{deps}))
  (diff dune.inc dune.inc.gen))))

(include dune.inc)
