
(include_subdirs unqualified)

(env
 (dev (flags -g)
      (c_flags -O0 -g -ggdb -Wall -Wstrict-aliasing -Werror))
 (release (c_flags -O2 -DNDEBUG -Wall -Wstrict-aliasing)))

(rule
 (targets ccopt.sexp cclib.sexp)
 (action (run ./discover/discover.exe)))

(rule
 (alias configure)
 (deps configure.ml)
 (action (progn
  (with-stdout-to dune.inc.gen (run %{ocaml} unix.cma %{deps}))
  (diff dune.inc dune.inc.gen))))

(include dune.inc)
